lua: adds bufferlist and msgpack libraries
Adds basic Lua wrappers around ceph::bufferlist, the cmsgpack Lua
library, and builds Lua as a noinst shared library.

Signed-off-by: Noah Watkins <noahwatkins@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = gnu
-SUBDIRS = ocf java
-DIST_SUBDIRS = gtest ocf libs3 java
+SUBDIRS = ocf java liblua
+DIST_SUBDIRS = gtest ocf libs3 java liblua
 
 EXTRA_DIST = \
 	libs3/COPYING \
