build:  Add new package dependencies
The libbost-system-dev package is a build requirement on newer
distributions.  Since the package is not universially available
add the libbost-all-dev virtual package instead. (Bug #4725)

Add hdparm to rpm installation requirements.  The hdparm
command is used to determin if write-caching is enabled on
the journal device.

Signed-off-by: Gary Lowell  <gary.lowell@inktank.com>

--- a/debian/control
+++ b/debian/control
@@ -16,9 +16,7 @@ Build-Depends: autoconf,
                junit4,
                libaio-dev,
                libatomic-ops-dev,
-               libboost-dev (>= 1.42),
-               libboost-program-options-dev,
-               libboost-thread-dev,
+               libboost-all-dev,
                libcurl4-gnutls-dev,
                libedit-dev,
                libexpat1-dev,
