--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,10 @@ Build-Depends: autoconf,
                junit4,
                libaio-dev,
                libatomic-ops-dev,
-               libboost-all-dev,
+               libboost-dev (>= 1.42~),
+               libboost-program-options-dev (>= 1.42~),
+               libboost-thread-dev (>= 1.42~),
+               libboost-system-dev (>= 1.42~),
                libcurl4-gnutls-dev,
                libedit-dev,
                libexpat1-dev,
