init-ceph: behave if incompletely installed
e.g., Debian 'removed, config remains' state

Fixes: #5695
Signed-off-by: Sage Weil <sage@inktank.com>

--- a/src/init-ceph.in
+++ b/src/init-ceph.in
@@ -34,6 +34,10 @@ usage_exit() {
     exit
 }
 
+# behave if we are not completely installed (e.g., Debian "removed,
+# config remains" state)
+test -f $LIBDIR/ceph_common.sh || exit 0
+
 . $LIBDIR/ceph_common.sh
 
 EXIT_STATUS=0
