ceph: fix return code for --admin-daemon
Simplify this by making it take the same path as the (new) 'daemon
...' syntax.

Backport: dumpling
Signed-off-by: Sage Weil <sage@inktank.com>

--- a/src/ceph.in
+++ b/src/ceph.in
@@ -507,11 +507,7 @@ def main():
     format = parsed_args.output_format
 
     if parsed_args.admin_socket:
-        try:
-            print admin_socket(parsed_args.admin_socket, childargs, format)
-        except Exception as e:
-            print >> sys.stderr, 'admin_socket: {0}'.format(e)
-        return 0
+        childargs = [ 'daemon', parsed_args.admin_socket ] + childargs
 
     if len(childargs) > 0 and childargs[0] == "daemon":
         if len(childargs) > 2:
